Projeto/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Users\inesm\Downloads\BlueJ-windows-530\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
17
-classpath
C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\bluejcore.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\javafx-base-20.0.1-win.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\javafx-base-20.0.1.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\javafx-controls-20.0.1-win.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\javafx-controls-20.0.1.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\javafx-fxml-20.0.1-win.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\javafx-fxml-20.0.1.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\javafx-graphics-20.0.1-win.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\javafx-graphics-20.0.1.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\javafx-media-20.0.1-win.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\javafx-media-20.0.1.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\javafx-swing-20.0.1-win.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\javafx-web-20.0.1-win.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\junit-4.12.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\junit-jupiter-5.5.2.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\junit-jupiter-api-5.5.2.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\junit-jupiter-engine-5.5.2.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\junit-jupiter-params-5.5.2.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\junit-platform-commons-1.5.2.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\junit-platform-engine-1.5.2.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\junit-platform-launcher-1.5.2.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\junit-platform-suite-api-1.5.2.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\junit-vintage-engine-5.5.2.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\hamcrest-core-1.3.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\opentest4j-1.2.0.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\lang-stride.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\javafx\javafx.base.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\javafx\javafx.controls.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\javafx\javafx.fxml.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\javafx\javafx.graphics.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\javafx\javafx.media.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\javafx\javafx.properties.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\javafx\javafx.swing.jar;C:\Users\inesm\Downloads\BlueJ-windows-530\bluej\lib\javafx\javafx.web.jar;C:\Users\inesm\OneDrive\Documentos\2ano2sem\POO\TP\GrupoTP-10\Projeto
-d
C:\Users\inesm\OneDrive\Documentos\2ano2sem\POO\TP\GrupoTP-10\Projeto\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\inesm\OneDrive\Documentos\2ano2sem\POO\TP\GrupoTP-10\Projeto\Atividade.java
<---- end of javadoc command ---->
Loading source file C:\Users\inesm\OneDrive\Documentos\2ano2sem\POO\TP\GrupoTP-10\Projeto\Atividade.java...
Constructing Javadoc information...
C:\Users\inesm\OneDrive\Documentos\2ano2sem\POO\TP\GrupoTP-10\Projeto\Atividade.java:70: error: cannot find symbol
    public abstract int consumoCalorias(Utilizador utilizador);
                                        ^
  symbol:   class Utilizador
  location: class Atividade
1 error
